# t2d-feature-generation

./: .cookiecutter.json  .cookiecutter.json.rej  .cruft.json  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej  requirements.txt  tasks.py
.github/: pull_request_template.md
.github/workflows/: tests.yml
.zen/: config.yaml
application/: dataset_description.py  get_predictor_params.py  main.py  test_flattening_with_end_timestamp.py  test_physical_visits_by_timestamp_end_vs_start.py
application/modules/: get_predictor_params.py  specify_features.py
application/modules/loaders/: t2d_loaders.py
application/outcome_specification/00_generate_dfs/: 10_medication.rmd  20_hba1c.rmd  30_diagnoses.rmd  41_find_first_p.rmd  49_combined.rmd
application/outcome_specification/R/00_generate_dfs/: 49_combined.rmd
application/outcome_specification/python/: combined.py  diagnoses.py  lab_results.py  medications.py  t1d_diagnoses.py  t2d_diagnoses.py
application/pipelines/: dynamic_main_pipeline.py  main_pipeline.py
application/pipelines/dynamic_pipelines/: dynamic_pipeline.py  gather_step.py
application/steps/: concatenators.py  dataset_saver.py  feature_concatenator.py  flatten_from_specs.py  somatic_loaders.py
application/steps/loaders/: outcome_loader.py  prediction_times_loader.py  predictor_loader.py
docs/: conf.py  faq.md  index.md  installation.md
docs/api/: docs_example.md
src/t2d_feature_generation/: __init__.py  __init__.py.rej  get_eligible_prediction_times.py  outcome_utils.py  specify_features.py  utils_for_testing.py
src/t2d_feature_generation/outcome_specification/: combined.py  lab_results.py  medications.py  t1d_diagnoses.py  t2d_diagnoses.py
src/t2d_feature_generation/pipelines/: dynamic_main_pipeline.py
src/t2d_feature_generation/pipelines/dynamic_pipelines/: dynamic_pipeline.py  gather_step.py
src/t2d_feature_generation/steps/: concatenators.py  dataset_saver.py  flatten_from_specs.py
src/t2d_feature_generation/steps/loaders/: outcome_loader.py  prediction_times_loader.py  predictor_loader.py  quarantine_df_loader.py  static_loader.py
tests/: __init__.py  first_test.py  test_concatenators.py  test_get_project_info.py  test_outcome_utils.py
tests/test_steps/: test_concatenators.py
